--- a/example-manifest.yml
+++ b/example-manifest.yml
@@ -8,3 +8,4 @@ applications:
     env:
       uptime_api: http://uptime.domain.com/api/checks/
       cf_api: http://cf-api.domain.com # https://github.com/SpringerPE/cf-light-api
+      route_regex: springer-is-awesome # Will add checks for all url's containing "springer-is-awesome", add any valid regex as you see fit. If unsed it will default to .*
