Make meta path configurable.

--- a/example-manifest.yml
+++ b/example-manifest.yml
@@ -11,3 +11,4 @@ applications:
       route_regex: springer-is-awesome # Will add checks for all url's containing "springer-is-awesome", add any valid regex as you see fit. If unsed it will default to .*
       alertTreshold: 1  # optional
       interval: 60      # optional
+      metaPath: /internal/status # Currently needed
